--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">FilmLibrary</string>
+    <string name="search">search</string>
+    <string name="settings">Settings</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="btn_text_home">Home</string>
+    <string name="btn_text_favorites">Favorites</string>
+    <string name="btn_text_ratings">Ratings</string>
+    <string name="favorites_fragment">FavoritesFragment</string>
+    <string name="ratings_fragment">RatingsFragment</string>/>
 </resources>
