--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FilmLibrary</string>
+    <string name="app_name">filmlibrary</string>
     <string name="search">search</string>
     <string name="settings">Settings</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -7,6 +7,6 @@
     <string name="btn_text_home">Home</string>
     <string name="btn_text_favorites">Favorites</string>
     <string name="btn_text_ratings">Ratings</string>
-    <string name="favorites_fragment">FavoritesFragment</string>
+    <string name="favorites_fragment" >FavoritesFragment</string>
     <string name="ratings_fragment">RatingsFragment</string>/>
 </resources>
