--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,34 @@
 <resources>
-    <string name="app_name">filmlibrary</string>
-    <string name="search">search</string>
-    <string name="settings">Settings</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="btn_text_home">Home</string>
-    <string name="btn_text_favorites">Favorites</string>
-    <string name="btn_text_ratings">Ratings</string>
-    <string name="text_description">Описание:</string>
-    <string name="text_rating">Рейтинг:</string>
-    <string name="text_date">Дата:</string>
-    <string name="snackBarError">Error</string>
-    <string name="snackBarReload">Reload</string>
-    <string name="favorites_fragment">FavoritesFragment</string>
-    <string name="ratings_fragment">RatingsFragment</string>
+    <string name="app_name">Movies</string>
+    <string name="yearHead">Год:</string>
+    <string name="titleHead">Название:</string>
+    <string name="imagemovie">Постер фильма</string>
+    <string name="home">Главная</string>
+    <string name="favorite">Избранное</string>
+    <string name="raiting">Мои оценки</string>
+    <string name="about">О программе</string>
+    <string name="help">Справка</string>
+    <string name="Search">Найти</string>
+    <string name="logo">Logo</string>
+    <string name="menu_string">Фильмы</string>
+    <string name="progile">Профиль</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">Поиск</string>
+    <string name="new_movies">Новинки</string>
+    <string name="rated_movies">Популярные сейчас</string>
+    <string name="rated_movies_cat3">Фильмы категории 3</string>
+    <string name="rated_movies_cat2">Фильмы категории 2</string>
+    <string name="rated_movies_cat1">Фильмы категории 1</string>
+    <string name="searchFragment">Search</string>
+    <string name="profileFragment">Profile</string>
+    <string name="favoriteFragment">Favorite</string>
+    <string name="ng_name_home">Главная</string>
+    <string name="ng_name_search">Поиск</string>
+    <string name="ng_name_fav">Избранные</string>
+    <string name="ng_name_profile">Профиль</string>
+    <string name="ng_name_movies_cat">Фильмы по категории</string>
+    <string name="ng_name_item_movie">Инфо о фильме</string>
+    <string name="ErrorMsg">Error!</string>
+    <string name="ReloadMsg">Reload?</string>
 </resources>
