--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="adult">Adult</string>
     <string name="MovieNoteHeader">Мои заметки:</string>
     <string name="ok">OK</string>
+    <string name="favorite">Избранные</string>
 </resources>
