Передача данных о фильме из списка,остальное подгружается из сети.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="imagemovie">Постер фильма</string>
     <string name="home">Тренды</string>
     <string name="categories">Жанры</string>
-    <string name="raiting">Мои оценки</string>
+    <string name="rating">Мои оценки</string>
     <string name="about">О программе</string>
     <string name="help">Справка</string>
     <string name="Search">Найти</string>
