Доработка.Добавьте возможность позвонить по номеру из списка контактов.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="imagemovie">Постер фильма</string>
     <string name="home">Тренды</string>
     <string name="categories">Жанры</string>
-    <string name="rating">Мои оценки</string>
+    <string name="raiting">Мои оценки</string>
     <string name="about">О программе</string>
     <string name="help">Справка</string>
     <string name="Search">Найти</string>
@@ -43,4 +43,11 @@
     <string name="contacts">Контакты</string>
     <string name="withPhone">С телефонами</string>
     <string name="withPhoneShared">withPhone</string>
+    <string name="accessContact">Доступ к контактам</string>
+    <string name="reasonContact">Объяснение</string>
+    <string name="setAccessContact">Предоставить доступ</string>
+    <string name="noAccess">Не надо</string>
+    <string name="setAccessCall">Предоставить доступ</string>
+    <string name="reasonCall">Объяснение</string>
+    <string name="accsessToCall">Доступ к звонкам</string>
 </resources>
