Добавлен сервис для работы с геозон.Добавление карты во фрагмент. Изменение инициализации.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,9 @@
     <string name="nameCrew">Имя</string>
     <string name="crewRole">Должность</string>
     <string name="person_image">person image</string>
+    <string name="InTrends">В трендах:</string>
+    <string name="Cinema">Геозоны:</string>
+    <string name="Person">Персона</string>
+    <string name="Maps">Карта</string>
+    <string name="CurrentPosition">Моё местоположение</string>
 </resources>
