Добавил в ресурсы координаты кинотеатров Ульяновска и создаю по ним геозоны

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="crewRole">Должность</string>
     <string name="person_image">person image</string>
     <string name="InTrends">В трендах:</string>
-    <string name="Cinema">Геозоны:</string>
+    <string name="Cinema">Кинотеатры Ульяновска:</string>
     <string name="Person">Персона</string>
     <string name="Maps">Карта</string>
     <string name="CurrentPosition">Моё местоположение</string>
