--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
     <string name="UnknowGoeFence">Неизвестно</string>
     <string name="geoFenceShared">GeoFence</string>
     <string name="GeoFence">ГеоЗоны</string>
+    <string name="MessagesFAB">Сообщения</string>
+    <string name="Messages">Сообщения</string>
 </resources>
